--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
-    "cordova-android": "8.1.0",
+    "cordova-android": "^8.1.0",
     "cordova-plugin-inappbrowser": "^4.0.0",
     "cordova-plugin-x-socialsharing": "^6.0.1",
     "cordova-sqlite-storage": "^5.0.1",
